--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -49,7 +49,7 @@ site_description: MyStem коротко и ясно о современных в
 
   	<a href="/">На главную</a>
 
-  	<h2>Всем привет</h2>
+  	<h2>Mystem</h2>
 
 	<ul>
 	{%- for post in collections.post -%}
